2008-09-23  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: ignore whitespace only if it's between
	CodeRender blocks, not between DataBinding and
	CodeRenderExpression.

2008-09-01  Marek Habersack  <mhabersack@novell.com>

	* BaseCompiler.cs: AssignAppRelativeVirtualPath works with
	null/empty parser.InputFile now.

	* AspGenerator.cs: AddTypeToCache works checks whether inputFile
	is null or empty and does not assume the dependencies ArrayList is
	present.
	CloseControl uses ControlBuilder's OriginalTagName property,
	should the property/tag name be prefixed with 'prefix:'

	* CachingCompiler.cs: expect the dependencies ArrayList to be null
	or empty.

2008-08-31  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: trust builder.BindingContainerType
	in the 2.0+ profile - do not use container properties to detect
	the type.
	Added a helper method, compiled only when DEBUG is defined, to
	generate Console.WriteLine CodeDOM calls.
	Templates are processed before anything else, so that children
	which may depend on parent's templates can get access to them.

	* BaseCompiler.cs: add line pragmas only if enabled for the
	current file.

2008-08-29  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: properly handle profile base class
	specifications which refer to full type names.

2008-08-26  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: use VirtualPathUtility.Combine in
	GetAbsoluteVirtualPath for non-rooted paths.

2008-08-19  Marek Habersack  <mhabersack@novell.com>

	* ThemeDirectoryBuildProvider.cs: theme directory dependencies
	should use only virtual paths for CSS files. Fixes bug #397187

2008-08-18  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: process expression when they are
	used used in values of attributes without associated
	properties. Fixes bug #417883

	* ResourceExpressionBuilder.cs: added two overloads of